--- a/components/quiz.html
+++ b/components/quiz.html
@@ -15,8 +15,8 @@
     --color-black: #0000;
 }
 
-ul {
-  list-style: none; /* Remove default bullets */
+/* ul {
+  list-style: none;
   font-family: 'Public Sans';
     font-style: normal;
     font-weight: 400;
@@ -33,7 +33,7 @@ ul li::before {
   display: inline-block;
   width: 1em; 
   margin-left: -1em;
-}
+} */
 
 h1 {
     color: #000000;
