home page CTA fix

--- a/components/home.html
+++ b/components/home.html
@@ -1,7 +1,7 @@
 
 <div class="backgroundHero"> 
     <div class="homecard"> 
-        <div class="container">
+        <div class="cta-container">
             <div class="row">
                 <div class="primary-region medium-12">
                     <h1 class="primary-region__title">
