More homepage fixes

--- a/components/header.html
+++ b/components/header.html
@@ -125,7 +125,7 @@
                             <input name="utf8" type="hidden" value="✓">
                             <input id="affiliatename" name="affiliate" type="hidden" value="Application Forms">
                             <label class="usa-sr-only" for="header-search">Search Loan Forms</label>
-                            <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
+                            <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search Loan Forms" tabindex="0">
                             <button type="submit" tabindex="0">    
                                 <span class="usa-sr-only">Search</span>
                             </button>
@@ -150,7 +150,7 @@
                                         <input name="utf8" type="hidden" value="✓">
                                         <input id="affiliatename-mobile" name="affiliate" type="hidden" value="Application Form Search">
                                         <label class="usa-sr-only" for="header-search-mobile">Search Loan Forms</label>
-                                        <input id="header-search-mobile" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
+                                        <input id="header-search-mobile" autocomplete="off" name="query" type="search" placeholder="Search Loan Forms" tabindex="0">
                                         <button type="submit" tabindex="0">                
                                         <span class="usa-sr-only">Search</span>            
                                         </button>
